Fixing bckgr on mobile view

--- a/Styles/mainPageStyle.css
+++ b/Styles/mainPageStyle.css
@@ -15,15 +15,14 @@
 
 .container-fluid{
     padding: 0;
-}
-
-img {
-   height: 100vh;
-   width: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 
-/*@media (min-width: 586px){
+
+
+
 .home{
     background: url('../Media/mainPageBackground.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
@@ -33,12 +32,6 @@ img {
     height:100vh;;
     width: auto;
 }
-}
-
-.home{
-    background-color: black;
-    height:100vh;
-}*/
 
 .nav-item a span {
     font-size: 15px !important;
